--- a/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.html
+++ b/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.html
@@ -1,6 +1,6 @@
-<label for="modal-visibilityChoice" class="left-button">Modifier la visibilité du quiz</label>
-<button type="button" class="hidden" id="modal-visibilityChoice" (click)="modalService.open(visibilityChoiceModal)"></button>
-
+<button type="button" class="btn btn-info" id="modal-visibilityChoice" (click)="modalService.open(visibilityChoiceModal)">
+  Modifier la visibilité du quiz
+</button>
 
 <ng-template #visibilityChoiceModal let-modal>
     <div class="modal-header">
