--- a/front-end/src/app/start/home/home.component.html
+++ b/front-end/src/app/start/home/home.component.html
@@ -1,7 +1,7 @@
-<app-header [title] = "headerTitle"></app-header>
-<div class="main">        
-<div class="vertical-center">
+<body>
+<app-header [isHomeBrand]="true" [title]="'Quizzy quiz'"></app-header>      
+<div class="btns-column">
     <div class="big-button" routerLink= "/login">Personnel</div>
     <div class="big-button" routerLink= "/players">Accueilli</div>
 </div>
-</div>
+</body>
