--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -1,4 +1,4 @@
-<app-header [title] = "headerTitle"></app-header>
+<app-header [title]="headerTitle"></app-header>
 <div class="goback-button" routerLink= "/">
     <i class="fa fa-arrow-left" aria-hidden="true"></i>
 </div>
@@ -6,7 +6,7 @@
 <div class="main">
 <div class = "center ">
     <form [formGroup]="loginForm">
-        <input class = "password"[formControlName]="'password'" type="text" placeholder="Entrez le mot de passe">
+        <input class = "password"[formControlName]="'password'" type="text" placeholder="Entrer le mot de passe">
         <div class = "big-button" (click) = "loginUser()">Valider</div>
         <div *ngIf="!isCorrect">
             Vous avez entrez une mauvaise valeur ... Veuillez réessayer !
