--- a/front-end/src/app/game/runner/runner.component.html
+++ b/front-end/src/app/game/runner/runner.component.html
@@ -1,4 +1,7 @@
 <div *ngIf = "quiz && currentQuestion; else elseBlock">
+    <span class="navbar-brand" (click)="goBack()" style="color: grey; margin-left: 0.5em; float: left;">
+        <i class="fa fa-angle-left" aria-hidden="true"></i>
+    </span>
     <div id="questionQuiz">
         <div *ngIf="image.url; else noImage">
             <div *ngIf="currentQuestion.label; else noTxt">
