--- a/front-end/src/styles/common.scss
+++ b/front-end/src/styles/common.scss
@@ -1,10 +1,15 @@
 @import "../styles/variables";
 
+body {
+    padding-top: 70px + 20px;
+    width: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
 .main {
-    margin-top: 3rem;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 1rem;
+    /*margin-top: 3rem;
+    margin-bottom: 1rem;*/
 }
 
 .button-purple-theme {
@@ -37,22 +42,24 @@
 
 .goback-button {
     @extend .button-purple-theme;
-    position: fixed;
+    width: 5%;
+    /*position: fixed;
     margin-top: -2.8rem;
-    left: 0.5rem;
+    left: 0.5rem;*/
 }
 
 .home-button {
     @extend .button-purple-theme;
-    position: fixed;
+    width: 5%;
+    /*position: fixed;
     margin-top: -2.8rem;
-    right: 0.5rem;
+    right: 0.5rem;*/
 }
 
 .theme-button {
     @extend .button-blue-theme;
-    position: fixed;
-    right: 1rem;
+    /*position: fixed;
+    right: 1rem;*/
     /*background-color: $grey;
     border-color: $light-grey;*/
 }
@@ -67,13 +74,13 @@
 
 .new-button {
     @extend .button-blue-theme;
-    position: fixed;
+    //position: fixed;
 }
 
 .left-button {
     @extend .button-purple-theme;
-    position: fixed;
-    left: 2rem;
+   /* position: fixed;
+    left: 2rem;*/
 }
 
 .edit-button {
@@ -88,23 +95,20 @@
 }
 
 .img-in-header {
-    position: fixed;
-    margin-top: -2.8rem;
+    /*position: fixed;
+    margin-top: -2.8rem;*/
 }
 
 .big-button {
     @extend .button-purple-theme;
     margin-top: 2.5%;
     margin-bottom: 5%;
-    width: 100%;
-    height: 30%;
+    width: 70%;
+    height: 20%;
     text-align: center;
     font-weight: bold;
-    padding: 0.5em 1em;
+    //padding: 0.5em 1em;
     font-size: 300%;
-
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
 }
 
 .delete-button {
